@@ -3,6 +3,8 @@ Version 2.0.4 STABLE (rgerhards), 2008-03-??
 - bugfix: internally generated messages had "FROMHOST" property not set
 - bugfix: continue parsing if tag is oversize (discard oversize part) - thanks
   to mclaughlin77@gmail.com for the patch
+- added $HHOUR and $QHOUR system properties - can be used for half- and
+  quarter-hour logfile rotation
 ---------------------------------------------------------------------------
 Version 2.0.3 STABLE (rgerhards), 2008-03-12
 - bugfix: setting for $EscapeCopntrolCharactersOnReceive was not 
